# Philosophers

./: CMakeLists.txt
4321/philo/: Makefile  a.out  ft_atoi.c  ft_create_mutex.c  ft_create_pthread.c  ft_free.c  ft_get_args.c  ft_if_die.c  ft_itoa.c  ft_number_philo.c  ft_philo.c  ft_print.c  ft_print_status.c  ft_strlen.c  ft_wait_pthread.c  main.c  philo.h  philo.h.gch
4321/philo/a.out.dSYM/Contents/Resources/DWARF/: a.out
4321/philo_bonus/: ft_atoi.c  ft_create_forks.c  ft_create_semaphore.c  ft_exit.c  ft_get_args.c  ft_if_die.c  ft_itoa.c  ft_number_philo.c  ft_philo.c  ft_print.c  ft_print_status.c  ft_strlen.c  ft_wait_forks.c  main.c  philo_bonus.h
philo/: Makefile
philo/includes/: philo.h
philo/src/: ft_check_argc.c  ft_create_pthreads.c  ft_mutex.c  ft_philo.c  ft_philo_number.c  ft_print_status.c  ft_pthread.c  ft_utils1.c  ft_utils1.cpp  ft_wait_pthread.c  philo.c
philo_bonus/: Makefile
philo_bonus/includes/: philo_bonus.h
philo_bonus/src/: ft_check_argc.c  ft_init.c  ft_printing.c  ft_utils1.c  philo.c
